--- a/EcCalorJulia.ipynb
+++ b/EcCalorJulia.ipynb
@@ -21,7 +21,7 @@
     "u(x,y,t) = t\\cdot (1-(x^2+y^2) )\n",
     "$$\n",
     "en \n",
-    "$$\\Omega=[\\frac{-1}{2},\\frac{1}{2}]\\times[\\frac{-1}{2},\\frac{1}{2}]$$\n",
+    "$$\\Omega=[0,1]\\times[0,1]$$\n",
     "\n",
     "$$\n",
     "u_t - u_{xx} - u_{yy} = 1-(x^2+y^2)  + 4t = f(x,y,t)\n",
@@ -309,22 +309,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SIR_secuencial (generic function with 1 method)"
+       "EDP_secuencial (generic function with 1 method)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function SIR_secuencial()\n",
+    "function EDP_secuencial()\n",
     "    U = Array{Gridap.Geometry.GenericCellField{true},2}(undef, N_intervalos+1, n_iter+1);\n",
     "    F_sol = Array{Gridap.Geometry.GenericCellField{true},1}(undef, N_intervalos+1);\n",
     "\n",
@@ -361,22 +361,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SIR_parareal (generic function with 1 method)"
+       "EDP_parareal (generic function with 1 method)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function SIR_parareal()\n",
+    "function EDP_parareal()\n",
     "    U = Array{Gridap.Geometry.GenericCellField{true},2}(undef, N_intervalos+1, n_iter+1);\n",
     "    F_sol = Array{Gridap.Geometry.GenericCellField{true},1}(undef, N_intervalos+1);\n",
     "\n",
@@ -432,7 +432,7 @@
     }
    ],
    "source": [
-    "@time U1 = SIR_secuencial();"
+    "@time U1 = EDP_secuencial();"
    ]
   },
   {
@@ -449,7 +449,7 @@
     }
    ],
    "source": [
-    "@time U2 = SIR_parareal();"
+    "@time U2 = EDP_parareal();"
    ]
   },
   {
